<resources>
    <string name="app_name">iBook</string>
    <string name="title1">Education</string>
    <string name="title2">Relationship</string>
    <string name="title3">Spiritual</string>
    <string name="title4">Fiction</string>
    <string name="book_title1">The Man Without Qualities</string>
    <string name="book_title2">Nineteen Eighty Four</string>
    <string name="book_title3">A Portrait of the Artist as a Young Man</string>
    <string name="book_author1">Nathan Rose</string>
    <string name="book_author2">Daniel Drescher</string>
    <string name="book_author3">Katherine Ellen Foley</string>
    <string name="book_description1">By Nathan Rose. Cryptocurrency exchange, digital tokens, cryptocurrency wallets.</string>
    <string name="book_description2">Basic information and foundation on blockchain and Cryptocurrency by Daniel Drescher.</string>
    <string name="book_description3">Information on Blockchain Technology.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_text">Reading is a conversation. All books talk but a good book listens as well.</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="we_re_glad_to_have_you_back">We\'re glad to have you back</string>
    <string name="signin_email_address">Email Address</string>
    <string name="signin_password">Password</string>
    <string name="proceed_text">You\'re all set and ready to starting your favorite books.</string>
    <string name="proceed">Proceed</string>
    <string name="set_up_an_account">Set up an account</string>
    <string name="new_to_ibook">New to iBook?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sig_in_current_user">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="there_s_lots_in_store_for_you">There\'s lots in store for you</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_password">Create Password</string>
    <string name="create_a_username">Create a username</string>
    <string name="provide_your_last_name">Provide your last name</string>
    <string name="provide_your_first_name">Provide your first name</string>
    <string name="book_description">This is a wonderful book to read. I swear if you read this book you will never read another book again in your life. It began with a story and also ended with a story.</string>
    <string name="title_description">Description</string>
    <string name="title_pages">Pages</string>
    <string name="title_language">Language</string>
    <string name="download_dialog">Your downloaded books are stored in your bookshelf for ease of use and accesibility.</string>
    <string name="categorisation_heading_text">All Categories</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="categorisatio_heading_text">All Categories</string>
    <string name="all">All</string>
    <string name="biography">Biography</string>
    <string name="business">Business</string>
    <string name="children">Children</string>
    <string name="classics">Classics</string>
    <string name="comics">Comics</string>
    <string name="cookbook">Cookbook</string>
    <string name="ebook">Ebook</string>
    <string name="fantasy">Fantasy</string>
    <string name="fiction">Fiction</string>
    <string name="best_reads">Best Reads</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="more">More</string>

    <string name="search">Search</string>
    <string name="_1_result_found">1 result found</string>


    <string name="menu_search">Search</string>
    <string name="back_arrow">back arrow</string>
    <string name="donate_a_book">Donate a Book</string>
    <string name="book_name">Book Name</string>
    <string name="the_jingle_jangle">The Jingle Jangle</string>
    <string name="author_name">Author Name</string>
    <string name="year_published">Year Published</string>
    <string name="_2017">2017</string>
    <string name="book_category">Book Category</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="card_image">card image</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="_10_10_10">10/10/10</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="_10_00am">10:00am</string>
    <string name="complete">Complete</string>
    <string name="profile_details">Profile Details</string>
    <string name="view_profile">View Profile</string>
    <string name="read_text">Read</string>
    <string name="desc_text">A Portrait of the Artist as a Young Man</string>
    <string name="bookshelf_text">Bookshelf</string>
    <string name="read_btn">ReadBtn</string>
    <string name="_1_book">1 Book</string>
    <string name="fibre_dot">fibre_dot</string>
    <string name="lens_dot">lens_dot</string>
    <string name="lens_dot2">lens_dot2</string>
    <string name="bookmark_icon">bookMark_icon</string>
    <string name="bookmark_content">320</string>
    <string name="calender_icon">TODO</string>
    <string name="date_content">10–12–2020</string>
    <string name="bookshelf_title">Bookshelf</string>
    <string name="home_title">Home</string>
    <string name="notifications_title">Notifications</string>
    <string name="books_menu">Books</string>
    <string name="notification_menu">Notification</string>
    <string name="home_menu">Home</string>
    <string name="abie_pepple">Abie Pepple</string>
    <string name="add_a_new_book">Add a New Book</string>
    <string name="upload_book_cover">Upload Book Cover Photo</string>
    <string name="add">Add</string>
    <string name="upload_cover_photo_image_description">click here to your book\'s cover photo</string>
    <string name="donate_hard_copy">Donate Hard Copy</string>
<<<<<<< HEAD
    <string name="success_text">Thank you for donating this precious jewel, we\'d be sure to notify our readers.</string>
    <string name="success_button">Proceed to Homepage</string>
=======
    <string name="abie_pepple_nav_name">\@abie_pepple</string>
    <string name="reginald_pepple_nav_head">Reginald Pepple</string>
    <string name="sign_out_nav">Sign out</string>
>>>>>>> 418faceabe312fb359388f682acafdb3216c4bbe
</resources>