<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DonateFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/donate_a_book"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title1"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/the_jingle_jangle" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/author_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:layout_marginStart="13dp"
                android:hint="@string/the_jingle_jangle" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/title2"
                android:text="@string/year_published"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/edit_text2"
                android:hint="@string/_2017" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_category"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title4"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/fiction" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text4"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pickup_location"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title5"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/fiction" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text5"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/card_image"
                android:scaleType="fitXY"
                android:src="@drawable/card" />

            <TextView
                android:id="@+id/title6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pickup_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/title6"
                android:layout_marginStart="13dp"
                android:hint="@string/_10_10_10" />

            <TextView
                android:id="@+id/title7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/title6"
                android:text="@string/pickup_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title7"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/edit_text6"
                android:hint="@string/_10_00am" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text7"
                android:layout_margin="15dp"
                android:text="@string/complete"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>

